SUBDIRS = libmengine \
		  $(TESTS_DIR) \
		  $(EXAMPLES_DIR)

EXTRA_DIST = \
	autogen.sh \
	version.sh

MAINTAINERCLEANFILES = \
	Makefile.in \
	aclocal.m4 \
	config/ \
	configure \
	examples/Makefile.in \
	examples/hello_world/Makefile.in \
	libmengine/Makefile.in \
	libmengine/config.h.in \
	m4/ \
	tests/Makefile.in
